doc: values and variables

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         height: 100vh;
         display: flex;
         align-items: center;
-        background: linear-gradient(to top left, #28b487, #7dd56f);
+        background: linear-gradient(to top left, #28b4889c, #7dd56f);
       }
       h1 {
         font-family: sans-serif;
@@ -23,6 +23,7 @@
       }
     </style>
     <script src="first.js"></script>
+    <script src="first assignment.js"></script>
   </head>
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
