--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       }
     </style>
     <script src="first.js"></script>
-    <script src="first assignment.js"></script>
+    <script src="assignments.js"></script>
   </head>
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
